--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+.page {
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
 .button {
   height: 40px;
   border-radius: 8px;
@@ -50,16 +58,112 @@
   display: none;
 }
 
-.page {
-  height: 100vh;
-  overflow: hidden;
+.header {
   display: flex;
-  flex-direction: column;
-  position: relative;
+  margin-top: 15px;
+  margin-left: 30px;
 }
 
-html {
-  font-family: "Roboto";
+.button {
+  margin-left: 15px;
+  padding: 10px;
+  background-color: #fff;
+  border: 1px solid #808080;
+  border-radius: 10px;
+}
+
+.calendar__header {
+  display: flex;
+  margin-left: 48px;
+  margin-right: 19px;
+}
+.calendar__vertical-line {
+  position: relative;
+  top: 80px;
+  border-left: 0.5px solid grey;
+  opacity: 0.5;
+  height: 20px;
+  color: grey;
+  background-color: grey;
+}
+.calendar__day-label {
+  flex-grow: 1;
+  flex-basis: 129px;
+  min-width: 129px;
+  height: 100px;
+  opacity: 0.5;
+}
+.calendar__body {
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+}
+.calendar__week-container {
+  display: flex;
+  overflow-y: auto;
+  height: 79%;
+  width: 100%;
+}
+.calendar__week {
+  display: flex;
+  flex-grow: 1;
+  margin-bottom: 30px;
+}
+.calendar__day {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  height: 1442px;
+  flex-basis: 129px;
+  min-width: 129px;
+  border: 1px solid #eee;
+  margin-bottom: 50px;
+}
+.calendar__time-slot {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  border: 0.5px solid #eee;
+  flex-grow: 1;
+  flex-basis: 129px;
+  height: 60px;
+}
+
+.day-label__day-name {
+  height: 50%;
+  padding-top: 25px;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 16px;
+}
+.day-label__day-num {
+  height: 50%;
+  padding: 15px 0px 10px;
+  text-align: center;
+}
+
+.calendar__time-scale {
+  display: block;
+  min-width: 48px;
+}
+
+.time-slot {
+  min-height: 60px;
+}
+.time-slot__time {
+  position: relative;
+  top: 48px;
+  left: 15px;
+  font-size: 12px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-size: 18px;
+  font-family: "Roboto", sans-serif;
 }
 
 /*# sourceMappingURL=styles.css.map */
