--- a/styles/navigation.scss
+++ b/styles/navigation.scss
@@ -1,1 +1,14 @@
 // стили навигации
+.header {
+  display: flex;
+  margin-top: 15px;
+  margin-left: 30px;
+}
+
+.button {
+  margin-left: 15px;
+  padding: 10px;
+  background-color: #fff;
+  border: 1px solid #808080;
+  border-radius: 10px;
+}
