--- a/styles/timescale.scss
+++ b/styles/timescale.scss
@@ -1,1 +1,18 @@
 // стили боковой временной шкалы
+
+.calendar {
+  &__time-scale {
+    display: block;
+    min-width: 48px;
+  }
+}
+
+.time-slot {
+  min-height: 60px;
+  &__time {
+    position: relative;
+    top: 48px;
+    left: 15px;
+    font-size: 12px;
+  }
+}
