--- a/styles/calendar.scss
+++ b/styles/calendar.scss
@@ -3,17 +3,6 @@
   &__header {
     display: flex;
     margin-left: 48px;
-    margin-right: 19px;
-  }
-
-  &__vertical-line {
-    position: relative;
-    top: 80px;
-    border-left: 0.5px solid grey;
-    opacity: 0.5;
-    height: 20px;
-    color: grey;
-    background-color: grey;
   }
 
   &__day-label {
@@ -21,33 +10,38 @@
     flex-basis: 129px;
     min-width: 129px;
     height: 100px;
-    opacity: 0.5;
+    opacity: 0.7;
   }
 
   &__body {
     height: 100vh;
     width: 100vw;
-    overflow: hidden;
   }
 
   &__week-container {
     display: flex;
-    overflow-y: auto;
+    overflow-y: scroll;
     height: 79%;
     width: 100%;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   &__week {
     position: relative;
     display: flex;
     flex-grow: 1;
+    height: 1440px;
+    margin-bottom: 25px;
   }
 
   &__day {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    height: 1442px;
+    height: 1440px;
     flex-basis: 129px;
     min-width: 129px;
     border: 1px solid #eee;
@@ -55,28 +49,43 @@
   }
 
   &__time-slot {
-    height: 100%;
     display: flex;
     flex-direction: column;
-    border: 0.5px solid #eee;
+    border-bottom: 0.5px solid #eee;
     flex-grow: 1;
     flex-basis: 129px;
-    height: 60px;
   }
 }
 
 .day-label {
+  display: flex;
+  flex-direction: column;
+
   &__day-name {
-    height: 50%;
-    padding-top: 25px;
-    text-align: center;
+    display: flex;
+    margin: auto;
     text-transform: uppercase;
     font-size: 16px;
   }
 
-  &__day-num {
-    height: 50%;
-    padding: 15px 0px 10px;
+  &__day-number {
+    display: flex;
+    margin: 0 auto 5px;
+    width: 40px;
+    height: 40px;
     text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-size: 22px;
   }
+}
+
+.day-name_current {
+  color: blue;
+}
+
+.day-number_current {
+  color: #fff;
+  background-color: blue;
+  border-radius: 50%;
 }
