--- a/styles/navigation.scss
+++ b/styles/navigation.scss
@@ -1,8 +1,13 @@
 // стили навигации
 .header {
   display: flex;
-  margin-top: 15px;
-  margin-left: 30px;
+  padding: 25px 0 10px 30px;
+
+  &__line {
+    width: 100%;
+    opacity: 0.5;
+    margin: 0;
+  }
 }
 
 .button {
@@ -11,4 +16,8 @@
   background-color: #fff;
   border: 1px solid #808080;
   border-radius: 10px;
+}
+
+.navigation__today-btn{
+  margin-left: 35px;
 }
