--- a/styles/timescale.scss
+++ b/styles/timescale.scss
@@ -9,10 +9,12 @@
 
 .time-slot {
   min-height: 60px;
+  
   &__time {
     position: relative;
     top: 48px;
-    left: 14px;
+    left: 12px;
     font-size: 12px;
+    opacity: .5;
   }
 }
