--- a/styles.css
+++ b/styles.css
@@ -46,9 +46,16 @@
   z-index: 10;
 }
 
+.popup {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .popup__content {
   position: absolute;
   background: #fff;
+  width: 300px;
+  height: 200px;
   padding: 16px;
   border: 1px solid #ccc;
   border-radius: 8px;
@@ -58,9 +65,16 @@
   display: none;
 }
 
+.delete-event-btn {
+  position: relative;
+  left: 200px;
+  top: 120px;
+  cursor: pointer;
+}
+
 .header {
   display: flex;
-  padding: 40px 0 10px 30px;
+  padding: 10px 0 10px 30px;
 }
 .header__line {
   width: 100%;
@@ -185,7 +199,7 @@
   color: #fff;
   background-color: rgb(3, 155, 229);
   z-index: 2;
-  border-radius: 5%;
+  border-radius: 10px;
 }
 
 * {
