--- a/src/styles/timescale.scss
+++ b/src/styles/timescale.scss
@@ -9,12 +9,12 @@
 
 .time-slot {
   min-height: 60px;
-  
+
   &__time {
     position: relative;
     top: 48px;
     left: 12px;
     font-size: 12px;
-    opacity: .5;
+    opacity: 0.5;
   }
 }
