--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -10,7 +10,6 @@
     flex-basis: 129px;
     min-width: 129px;
     height: 100px;
-    opacity: 0.7;
   }
 
   &__body {
@@ -82,11 +81,11 @@
 }
 
 .day-name_current {
-  color: blue;
+  color: rgb(3, 155, 229);
 }
 
 .day-number_current {
   color: #fff;
-  background-color: blue;
+  background-color: rgb(3, 155, 229);
   border-radius: 50%;
 }
