--- a/src/styles/create-event.scss
+++ b/src/styles/create-event.scss
@@ -1,1 +1,70 @@
 // стили формы события внутри модального окна
+.modal {
+  &__content {
+    border-radius: 8px;
+    background-image: linear-gradient(0deg, #e9e9e9, #fff);
+  }
+}
+
+.create-event {
+  &__close-btn {
+    display: flex;
+    height: 28px;
+    width: 28px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+    color: #b3b2b2;
+    border-radius: 25%;
+    margin-left: auto;
+
+    &::before {
+      z-index: 2;
+      position: relative;
+      top: -1px;
+      left: 0.5px;
+      content: '+';
+      color: rgba(71, 74, 81);
+      height: 26px;
+      width: 26px;
+      font-size: 24px;
+      transform: rotate(45deg);
+    }
+  }
+}
+
+.event-form {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  top: -25px;
+  &__field {
+    color: rgba(71, 74, 81);
+    margin: 5px;
+    padding: 5px;
+    border-radius: 8px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+
+    &:focus {
+    color: rgba(71, 74, 81);
+      outline: 1px solid rgba(0, 0, 0, 0.3);
+    }
+
+    &::placeholder {
+    color: rgba(71, 74, 81);
+    }
+  }
+
+  &__submit-btn {
+    position: relative;
+    top: 20px;
+    margin-left: auto;
+    width: 80px;
+    border-radius: 8px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    color: rgba(71, 74, 81);
+  }
+}
+
+input[name='title'] {
+  width: 280px;
+}
