--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -1,11 +1,22 @@
 // стили отображаемого в календаре события
 .event {
   position: absolute;
+  display: flex;
+  flex-direction: column;
   width: 90%;
   height: 100px;
-  padding: 10px;
+  padding: 10px 5px;
   color: #fff;
   background-color: rgb(3, 155, 229);
   z-index: 2;
   border-radius: 10px;
+  border-bottom: 1px solid #fff;
+
+  &__title {
+    border-bottom: 1px solid #fff;
+  }
+
+  &__description {
+    margin-top: 15px;
+  }
 }
