--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,6 @@
   flex-basis: 129px;
   min-width: 129px;
   height: 100px;
-  opacity: 0.7;
 }
 .calendar__body {
   height: 100vh;
@@ -166,12 +165,12 @@
 }
 
 .day-name_current {
-  color: blue;
+  color: rgb(3, 155, 229);
 }
 
 .day-number_current {
   color: #fff;
-  background-color: blue;
+  background-color: rgb(3, 155, 229);
   border-radius: 50%;
 }
 
@@ -191,15 +190,86 @@
   opacity: 0.5;
 }
 
+.modal__content {
+  border-radius: 8px;
+  background-image: linear-gradient(0deg, #e9e9e9, #fff);
+}
+
+.create-event__close-btn {
+  display: flex;
+  height: 28px;
+  width: 28px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  color: #b3b2b2;
+  border-radius: 25%;
+  margin-left: auto;
+}
+.create-event__close-btn::before {
+  z-index: 2;
+  position: relative;
+  top: -1px;
+  left: 0.5px;
+  content: "+";
+  color: rgb(71, 74, 81);
+  height: 26px;
+  width: 26px;
+  font-size: 24px;
+  transform: rotate(45deg);
+}
+
+.event-form {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  top: -25px;
+}
+.event-form__field {
+  color: rgb(71, 74, 81);
+  margin: 5px;
+  padding: 5px;
+  border-radius: 8px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+}
+.event-form__field:focus {
+  color: rgb(71, 74, 81);
+  outline: 1px solid rgba(0, 0, 0, 0.3);
+}
+.event-form__field::placeholder {
+  color: rgb(71, 74, 81);
+}
+.event-form__submit-btn {
+  position: relative;
+  top: 20px;
+  margin-left: auto;
+  width: 80px;
+  border-radius: 8px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  color: rgb(71, 74, 81);
+}
+
+input[name=title] {
+  width: 280px;
+}
+
 .event {
   position: absolute;
+  display: flex;
+  flex-direction: column;
   width: 90%;
   height: 100px;
-  padding: 10px;
+  padding: 10px 5px;
   color: #fff;
   background-color: rgb(3, 155, 229);
   z-index: 2;
   border-radius: 10px;
+  border-bottom: 1px solid #fff;
+}
+.event__title {
+  border-bottom: 1px solid #fff;
+}
+.event__description {
+  margin-top: 15px;
 }
 
 * {
