--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -1,4 +1,3 @@
-// стили сетки календаря и заголовка календаря с днями недели
 .calendar {
   &__header {
     display: flex;
@@ -81,11 +80,11 @@
 }
 
 .day-name_current {
-  color: rgb(3, 155, 229);
+  color: #039be5;
 }
 
 .day-number_current {
   color: #fff;
-  background-color: rgb(3, 155, 229);
+  background-color: #039be5;
   border-radius: 50%;
 }
