--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -43,14 +43,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
   &__content {
-    position: absolute;
-    background: #fff;
-    width: 300px;
-    height: 200px;
-    padding: 16px;
-    border: 1px solid #ccc;
     border-radius: 8px;
+    background-image: linear-gradient(0deg, #e9e9e9, #fff);
+    display: flex;
+    position: absolute;
+    width: 100px;
+    height: 50px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    justify-content: center;
   }
 }
 
@@ -59,8 +62,10 @@
 }
 
 .delete-event-btn {
-  position: relative;
-  left: 200px;
-  top: 120px;
   cursor: pointer;
+  display: flex;
+  margin: auto;
+  color: #474a51;
+  border-radius: 8px;
+  border: 1px solid #0000004d;
 }
