--- a/src/styles/create-event.scss
+++ b/src/styles/create-event.scss
@@ -1,4 +1,3 @@
-// стили формы события внутри модального окна
 .modal {
   &__content {
     border-radius: 8px;
@@ -11,7 +10,7 @@
     display: flex;
     height: 28px;
     width: 28px;
-    border: 1px solid rgba(0, 0, 0, 0.3);
+    border: 1px solid #0000004d;
     cursor: pointer;
     color: #b3b2b2;
     border-radius: 25%;
@@ -23,7 +22,7 @@
       top: -1px;
       left: 0.5px;
       content: '+';
-      color: rgba(71, 74, 81);
+      color: #474a51;
       height: 26px;
       width: 26px;
       font-size: 24px;
@@ -38,19 +37,19 @@
   position: relative;
   top: -25px;
   &__field {
-    color: rgba(71, 74, 81);
+    color: #474a51;
     margin: 5px;
     padding: 5px;
     border-radius: 8px;
-    border: 1px solid rgba(0, 0, 0, 0.3);
+    border: 1px solid #0000004d;
 
     &:focus {
-    color: rgba(71, 74, 81);
-      outline: 1px solid rgba(0, 0, 0, 0.3);
+    color: #474a51;
+      outline: 1px solid #0000004d;
     }
 
     &::placeholder {
-    color: rgba(71, 74, 81);
+    color: #474a51;
     }
   }
 
@@ -60,8 +59,8 @@
     margin-left: auto;
     width: 80px;
     border-radius: 8px;
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    color: rgba(71, 74, 81);
+    border: 1px solid #0000004d;
+    color: #474a51;
   }
 }
 
