--- a/styles.css
+++ b/styles.css
@@ -52,13 +52,15 @@
   justify-content: center;
 }
 .popup__content {
-  position: absolute;
-  background: #fff;
-  width: 300px;
-  height: 200px;
-  padding: 16px;
-  border: 1px solid #ccc;
   border-radius: 8px;
+  background-image: linear-gradient(0deg, #e9e9e9, #fff);
+  display: flex;
+  position: absolute;
+  width: 100px;
+  height: 50px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  justify-content: center;
 }
 
 .hidden {
@@ -66,10 +68,12 @@
 }
 
 .delete-event-btn {
-  position: relative;
-  left: 200px;
-  top: 120px;
   cursor: pointer;
+  display: flex;
+  margin: auto;
+  color: #474a51;
+  border-radius: 8px;
+  border: 1px solid rgba(0, 0, 0, 0.3019607843);
 }
 
 .header {
@@ -165,12 +169,12 @@
 }
 
 .day-name_current {
-  color: rgb(3, 155, 229);
+  color: #039be5;
 }
 
 .day-number_current {
   color: #fff;
-  background-color: rgb(3, 155, 229);
+  background-color: #039be5;
   border-radius: 50%;
 }
 
@@ -199,7 +203,7 @@
   display: flex;
   height: 28px;
   width: 28px;
-  border: 1px solid rgba(0, 0, 0, 0.3);
+  border: 1px solid rgba(0, 0, 0, 0.3019607843);
   cursor: pointer;
   color: #b3b2b2;
   border-radius: 25%;
@@ -211,7 +215,7 @@
   top: -1px;
   left: 0.5px;
   content: "+";
-  color: rgb(71, 74, 81);
+  color: #474a51;
   height: 26px;
   width: 26px;
   font-size: 24px;
@@ -225,18 +229,18 @@
   top: -25px;
 }
 .event-form__field {
-  color: rgb(71, 74, 81);
+  color: #474a51;
   margin: 5px;
   padding: 5px;
   border-radius: 8px;
-  border: 1px solid rgba(0, 0, 0, 0.3);
+  border: 1px solid rgba(0, 0, 0, 0.3019607843);
 }
 .event-form__field:focus {
-  color: rgb(71, 74, 81);
-  outline: 1px solid rgba(0, 0, 0, 0.3);
+  color: #474a51;
+  outline: 1px solid rgba(0, 0, 0, 0.3019607843);
 }
 .event-form__field::placeholder {
-  color: rgb(71, 74, 81);
+  color: #474a51;
 }
 .event-form__submit-btn {
   position: relative;
@@ -244,8 +248,8 @@
   margin-left: auto;
   width: 80px;
   border-radius: 8px;
-  border: 1px solid rgba(0, 0, 0, 0.3);
-  color: rgb(71, 74, 81);
+  border: 1px solid rgba(0, 0, 0, 0.3019607843);
+  color: #474a51;
 }
 
 input[name=title] {
@@ -260,7 +264,7 @@ input[name=title] {
   height: 100px;
   padding: 10px 5px;
   color: #fff;
-  background-color: rgb(3, 155, 229);
+  background-color: #039be5;
   z-index: 2;
   border-radius: 10px;
   border-bottom: 1px solid #fff;
