--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,3 +14,11 @@ body {
   font-size: 18px;
   font-family: 'Roboto', sans-serif;
 }
+
+.page {
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
